--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,39 +1,25 @@
 @use 'helpers' as *;
 
 :root {
-  --color-light: #FFFFFF;
+  --color-white: #FFFFFF;
+  --color-green: #00373E;
+  --color-bg:#F7F6F4; 
+  --color-yellow-light:#F9E6D0;
 
-  --color-dark: #141414;
-  --color-dark-10: #1A1A1A;
-  --color-dark-15: #262626;
-  --color-dark-20: #333333;
-  --color-dark-40: #666666;
 
-  --color-gray-50: #7E7E81;
-  --color-gray-60: #98989A;
+  --border: #{rem(1)} solid var(--color-green);
 
-  --color-accent: #FFD11A;
-  --color-red: #FF5500;
 
-  --gradient: linear-gradient(
-    45deg,
-    var(--color-dark-15) 64%,
-    var(--color-accent) 136%
-  );
+  --font-family-base: 'Bricolage Grotesque', sans-serif;
 
-  --border: #{rem(1)} solid var(--color-dark-15);
-
-  --shadow: 0 0 0 #{rem(3)} #191919;
-
-  --font-family-base: 'Inter', sans-serif;
-  --font-family-accent: 'Kumbh Sans', sans-serif;
-
-  --container-width: #{rem(1600)};
-  --container-padding-x: #{rem(16)};
+  --container-width: #{rem(1240)};
+  --container-padding-x: #{rem(15)};
 
   --transition-duration: 0.2s;
 
-  --100vw: calc(100vw - var(--scrollbar-width));
+  --border-radius:#{rem(70)};
+
+
 
   @include laptop {
     --container-width: #{rem(1280)};
