--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,3 +9,9 @@
 @use 'blocks/header';
 @use 'blocks/hero';
 @use 'blocks/section';
+@use 'blocks/button';
+@use 'blocks/_burger-button';
+@use 'blocks/_burger-menu';
+@use 'blocks/_about';
+@use 'blocks/_services';
+
