--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -13,8 +13,8 @@ body {
   flex-direction: column;
   font-family: var(--font-family-base);
   letter-spacing: -0.03em;
-  color: var(--color-gray-50);
-  background-color: var(--color-dark);
+  color: var(--color-green);
+  background-color: var(--color-bg);
 }
 
 main {
@@ -27,30 +27,22 @@ h3, .h3,
 h4, .h4,
 h5, .h5,
 h6, .h6 {
-  color: var(--color-light);
+  color: var(--color-green);
+  font-weight: 700;
 }
 
-h1, .h1,
-h2, .h2,
-h3, .h3 {
-  font-family: var(--font-family-accent);
-  font-weight: 500;
-}
 
-h4, .h4,
-h5, .h5,
-h6, .h6 {
-  font-weight: 600;
-}
+
+
 
 h1, .h1 {
   @include fluid-text(70, 30);
 
-  line-height: 1.2;
+  letter-spacing: 0.5px
 }
 
 h2, .h2 {
-  @include fluid-text(58, 28);
+  @include fluid-text(52, 28);
 
   line-height: 1.3;
 }
@@ -60,7 +52,7 @@ h3, .h3 {
 }
 
 h4, .h4 {
-  @include fluid-text(26, 18);
+  @include fluid-text(30, 18);
 }
 
 h5, .h5 {
@@ -71,9 +63,7 @@ h6, .h6 {
   @include fluid-text(20, 16);
 }
 
-p {
-  --paragraphMarginBottom: #{rem(24)};
-}
+
 
 a,
 button,
@@ -89,7 +79,7 @@ a {
   color: inherit;
 
   @include hover {
-    color: var(--color-accent);
+    color: var(--color-green);
   }
 
   &[class] {
@@ -97,22 +87,5 @@ a {
   }
 }
 
-:focus-visible {
-  outline: rem(2) dashed var(--color-light);
-  outline-offset: rem(4);
-  transition-duration: 0s !important;
-}
 
-a,
-button {
-  &[aria-label] {
-    position: relative;
 
-    &::before {
-      @include abs-center;
-      @include square(rem(44));
-
-      content: '';
-    }
-  }
-}
