--- a/styles/main.css
+++ b/styles/main.css
@@ -183,71 +183,37 @@ svg * {
   }
 }
 @font-face {
-  font-family: "Kumbh Sans";
-  src: url("../fonts/KumbhSans-Regular.woff2") format("woff2");
+  font-family: "Bricolage Grotesque";
+  src: url("../fonts/BricolageGrotesque-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Kumbh Sans";
-  src: url("../fonts/KumbhSans-Medium.woff2") format("woff2");
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Inter";
-  src: url("../fonts/Inter-Regular.woff2") format("woff2");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Inter";
-  src: url("../fonts/Inter-Medium.woff2") format("woff2");
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Inter";
-  src: url("../fonts/Inter-SemiBold.woff2") format("woff2");
-  font-weight: 600;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Inter";
-  src: url("../fonts/Inter-SemiBold.woff2") format("woff2");
+  font-family: "Bricolage Grotesque";
+  src: url("../fonts/BricolageGrotesque-Bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
+@font-face {
+  font-family: "Bricolage Grotesque";
+  src: url("../fonts/BricolageGrotesque-SemiBold.woff2") format("woff2");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
 :root {
-  --color-light: #FFFFFF;
-  --color-dark: #141414;
-  --color-dark-10: #1A1A1A;
-  --color-dark-15: #262626;
-  --color-dark-20: #333333;
-  --color-dark-40: #666666;
-  --color-gray-50: #7E7E81;
-  --color-gray-60: #98989A;
-  --color-accent: #FFD11A;
-  --color-red: #FF5500;
-  --gradient: linear-gradient(
-    45deg,
-    var(--color-dark-15) 64%,
-    var(--color-accent) 136%
-  );
-  --border: 0.0625rem solid var(--color-dark-15);
-  --shadow: 0 0 0 0.1875rem #191919;
-  --font-family-base: "Inter", sans-serif;
-  --font-family-accent: "Kumbh Sans", sans-serif;
-  --container-width: 100rem;
-  --container-padding-x: 1rem;
+  --color-white: #FFFFFF;
+  --color-green: #00373E;
+  --color-bg:#F7F6F4;
+  --color-yellow-light:#F9E6D0;
+  --border: 0.0625rem solid var(--color-green);
+  --font-family-base: "Bricolage Grotesque", sans-serif;
+  --container-width: 77.5rem;
+  --container-padding-x: 0.9375rem;
   --transition-duration: 0.2s;
-  --100vw: calc(100vw - var(--scrollbar-width));
+  --border-radius:4.375rem;
 }
 @media (width <= 90.06125rem) {
   :root {
@@ -297,8 +263,8 @@ body {
   flex-direction: column;
   font-family: var(--font-family-base);
   letter-spacing: -0.03em;
-  color: var(--color-gray-50);
-  background-color: var(--color-dark);
+  color: var(--color-green);
+  background-color: var(--color-bg);
 }
 
 main {
@@ -311,29 +277,17 @@ h3, .h3,
 h4, .h4,
 h5, .h5,
 h6, .h6 {
-  color: var(--color-light);
-}
-
-h1, .h1,
-h2, .h2,
-h3, .h3 {
-  font-family: var(--font-family-accent);
-  font-weight: 500;
-}
-
-h4, .h4,
-h5, .h5,
-h6, .h6 {
-  font-weight: 600;
+  color: var(--color-green);
+  font-weight: 700;
 }
 
 h1, .h1 {
   font-size: clamp(1.875rem, 1.069214876rem + 3.305785124vw, 4.375rem);
-  line-height: 1.2;
+  letter-spacing: 0.5px;
 }
 
 h2, .h2 {
-  font-size: clamp(1.75rem, 1.145661157rem + 2.479338843vw, 3.625rem);
+  font-size: clamp(1.75rem, 1.2665289256rem + 1.9834710744vw, 3.25rem);
   line-height: 1.3;
 }
 
@@ -342,7 +296,7 @@ h3, .h3 {
 }
 
 h4, .h4 {
-  font-size: clamp(1.125rem, 0.9638429752rem + 0.6611570248vw, 1.625rem);
+  font-size: clamp(1.125rem, 0.8832644628rem + 0.9917355372vw, 1.875rem);
 }
 
 h5, .h5 {
@@ -351,10 +305,6 @@ h5, .h5 {
 
 h6, .h6 {
   font-size: clamp(1rem, 0.9194214876rem + 0.3305785124vw, 1.25rem);
-}
-
-p {
-  --paragraphMarginBottom: 1.5rem;
 }
 
 a,
@@ -372,122 +322,55 @@ a {
 }
 @media (any-hover: hover) {
   a:hover {
-    color: var(--color-accent);
+    color: var(--color-green);
   }
 }
 @media (any-hover: none) {
   a:active {
-    color: var(--color-accent);
+    color: var(--color-green);
   }
 }
 a[class] {
   text-decoration: none;
 }
 
-:focus-visible {
-  outline: 0.125rem dashed var(--color-light);
-  outline-offset: 0.25rem;
-  transition-duration: 0s !important;
-}
-
-a[aria-label],
-button[aria-label] {
-  position: relative;
-}
-a[aria-label]::before,
-button[aria-label]::before {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  translate: -50% -50%;
-  width: 2.75rem;
-  height: 2.75rem;
-  content: "";
-}
-
 .logo {
-  max-width: clamp(7.875rem, 6.8073347107rem + 4.3801652893vw, 11.1875rem);
+  font-size: clamp(1.875rem, 1.472107438rem + 1.652892562vw, 3.125rem);
+  font-weight: 700;
+}
+@media (width <= 90.06125rem) {
+  .logo {
+    color: red;
+  }
+}
+@media (width <= 63.99875rem) {
+  .logo {
+    color: green;
+  }
+}
+@media (width <= 47.99875rem) {
+  .logo {
+    color: blue;
+  }
+}
+@media (width <= 30.06125rem) {
+  .logo {
+    color: yellow;
+  }
 }
 
-.header {
-  position: sticky;
-  z-index: 100;
-  top: 0;
-  animation-name: scrolling-header;
-  animation-fill-mode: both;
-  animation-timeline: scroll();
-  animation-range: 6.25rem 12.5rem;
-}
-@keyframes scrolling-header {
-  to {
-    box-shadow: 0 0 1rem 0 var(--color-dark-40);
-  }
-}
-.header__promo {
-  padding-block: 1.25rem;
-  text-align: center;
-  background-color: var(--color-dark);
-  border-bottom: var(--border);
-}
-@media (width <= 47.99875rem) {
-  .header__promo {
-    padding-block: 0.875rem;
-  }
-}
-@media (width <= 30.06125rem) {
-  .header__promo {
-    font-size: 0.75rem;
-  }
-}
-@media (width <= 30.06125rem) {
-  .header__promo-link .icon {
-    -moz-column-gap: 0.3125rem;
-         column-gap: 0.3125rem;
-  }
-}
 .header__body {
-  padding-block: 1.5rem;
-  background-color: var(--color-dark-10);
+  padding-block: 2.5rem;
 }
-@media (width <= 47.99875rem) {
+@media (width <= 63.99875rem) {
   .header__body {
     padding-block: 1.25rem;
   }
 }
-.header__body-inner {
+.header__menu {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
-}
-@media (width > 47.99875rem) {
-  .header__overlay {
-    display: contents;
-  }
-}
-@media (width <= 47.99875rem) {
-  .header__overlay {
-    position: fixed;
-    inset: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    row-gap: 3rem;
-    padding: 1rem;
-    background-color: var(--color-dark-10);
-    transition-duration: var(--transition-duration);
-  }
-  .header__overlay:not(.is-active) {
-    opacity: 0;
-    visibility: hidden;
-    translate: 100%;
-  }
-}
-@media (width <= 47.99875rem) {
-  .header__menu {
-    overflow-y: auto;
-  }
 }
 .header__menu-list {
   display: flex;
@@ -495,169 +378,264 @@ button[aria-label]::before {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
 }
-@media (width <= 90.06125rem) {
-  .header__menu-list {
-    -moz-column-gap: 0.375rem;
-         column-gap: 0.375rem;
-  }
-}
-@media (width <= 47.99875rem) {
-  .header__menu-list {
-    flex-direction: column;
-    row-gap: 1rem;
-  }
-}
 .header__menu-link {
   padding: 0.875rem 1.5rem;
-  color: var(--color-gray-50);
 }
-@media (width <= 90.06125rem) {
+@media (width <= 63.99875rem) {
   .header__menu-link {
-    padding: 0.625rem 1.125rem;
+    padding: 0.625rem 0.75rem;
   }
 }
 .header__menu-link.is-active {
-  color: var(--color-light);
+  color: var --color-white;
   font-weight: 500;
   background-color: var(--color-dark);
   border: var(--border);
   border-radius: 0.625rem;
   pointer-events: none;
 }
-@media (width <= 47.99875rem) {
-  .header__contact-us-link {
-    width: 100%;
-    max-width: 18.75rem;
-    align-self: center;
+
+.hero__image-left {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+@media (width <= 63.99875rem) {
+  .hero__image-left {
+    height: 70%;
   }
 }
-
-@media (width > 63.99875rem) {
-  .hero__main {
-    display: grid;
-    grid-template-columns: 60% auto;
-    grid-template-areas: "body resources-preview" "metrics resources-preview";
+.hero__image-right {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+@media (width <= 63.99875rem) {
+  .hero__image-right {
+    height: 70%;
   }
 }
 .hero__body {
-  grid-area: body;
-  padding-top: 9.375rem;
-  padding-right: 3.125rem;
-  padding-bottom: 6.25rem;
+  padding-block: clamp(5rem, 3.1869834711rem + 7.4380165289vw, 10.625rem);
+  background-color: var(--color-yellow-light);
+  display: flex;
+  justify-content: center;
+  position: relative;
+  border-radius: var(--border-radius);
+  overflow: hidden;
+}
+.hero__wrapper {
+  max-width: 40rem;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 100;
+}
+.hero__description {
+  font-size: clamp(1rem, 0.8388429752rem + 0.6611570248vw, 1.5rem);
+}
+.hero__button {
+  margin-top: 2.5rem;
+}
+
+.section {
+  padding-block: clamp(2.5rem, 1.291322314rem + 4.958677686vw, 6.25rem);
+}
+
+.button {
+  display: inline-flex;
+  justify-content: center;
+  min-width: 12rem;
+  padding: 0.9375rem 2.5rem;
+  font-size: 1.25rem;
+  color: var(--color-white);
+  white-space: nowrap;
+  background-color: var(--color-green);
+  border: none;
+  font-weight: 600;
+  border-radius: var(--border-radius);
+}
+.button-transparent {
+  color: var(--color-green);
+  border: 1px solid var(--color-green);
+  background-color: transparent;
 }
 @media (width <= 90.06125rem) {
-  .hero__body {
-    padding-top: 6.25rem;
-    padding-right: 2.5rem;
-  }
-}
-@media (width <= 63.99875rem) {
-  .hero__body {
-    padding-right: 0;
-    padding-top: 2.5rem;
-    padding-bottom: 1.875rem;
-  }
-}
-.hero__subtitle {
-  font-size: clamp(1.125rem, 0.8832644628rem + 0.9917355372vw, 1.875rem);
-  font-family: var(--font-family-accent);
-  font-weight: 500;
-  color: var(--color-dark-40);
-}
-.hero__subtitle:not(:last-child) {
-  margin-bottom: 1.875rem;
-}
-@media (width <= 47.99875rem) {
-  .hero__subtitle:not(:last-child) {
-    margin-bottom: 0.875rem;
-  }
-}
-.hero__title:not(:last-child) {
-  margin-bottom: 1.25rem;
-}
-@media (width <= 47.99875rem) {
-  .hero__title:not(:last-child) {
-    margin-bottom: 0.625rem;
-  }
-}
-.hero__metrics {
-  grid-area: metrics;
-}
-@media (width > 63.99875rem) {
-  .hero__metrics {
-    border-top: var(--border);
-  }
-}
-@media (width <= 63.99875rem) {
-  .hero__metrics::before {
-    width: var(--100vw);
-    right: calc(var(--container-padding-x) * -1);
-  }
-}
-.hero__resources-preview {
-  grid-area: resources-preview;
-  padding-left: 5rem;
-  padding-bottom: 5rem;
-  background: url("../../images/resources-preview/bg.png") 0 0/cover no-repeat;
-}
-@media (width <= 90.06125rem) {
-  .hero__resources-preview {
-    padding-left: 3.125rem;
-    padding-bottom: 3.125rem;
-  }
-}
-@media (width > 63.99875rem) {
-  .hero__resources-preview {
-    border-left: var(--border);
-  }
-}
-@media (width <= 63.99875rem) {
-  .hero__resources-preview {
-    width: var(--100vw);
-    margin-left: calc(var(--container-padding-x) * -1);
-    padding: 6.25rem 2.5rem 2.5rem;
-    background-image: url("../../images/resources-preview/bg_tablet.png");
-    background-size: contain;
-  }
-}
-.hero__advantages {
-  border-block: var(--border);
-}
-@media (width > 63.99875rem) {
-  .hero__advantages-list {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-.hero__advantages-item {
-  --paddingX: 5rem;
-  padding-block: 3.125rem;
-}
-@media (width <= 90.06125rem) {
-  .hero__advantages-item {
-    --paddingX: 3.125rem;
-    padding-block: 2.5rem;
-  }
-}
-@media (width > 63.99875rem) {
-  .hero__advantages-item:not(:first-child) {
-    padding-left: var(--paddingX);
-  }
-  .hero__advantages-item:not(:last-child) {
-    padding-right: var(--paddingX);
-    border-right: var(--border);
-  }
-}
-@media (width <= 63.99875rem) {
-  .hero__advantages-item {
-    padding-block: 1.875rem;
-  }
-  .hero__advantages-item:not(:last-child) {
-    border-bottom: var(--border);
+  .button {
+    min-width: 6.4375rem;
+    padding: 0.875rem 1.25rem;
+    font-size: 0.875rem;
   }
 }
 
-.section__header {
-  padding-block: clamp(2.5rem, 0.8884297521rem + 6.6115702479vw, 7.5rem);
-  background-color: var(--color-dark-10);
+.burger-button {
+  width: 2.125rem;
+  height: 2.125rem;
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0.53125rem 0.265625rem;
+  color: var(--color-green);
+  background-color: transparent;
+  border: none;
+}
+@media (any-hover: hover) {
+  .burger-button:hover {
+    color: #fff;
+  }
+}
+@media (any-hover: none) {
+  .burger-button:active {
+    color: #fff;
+  }
+}
+.burger-button.is-active .burger-button__line:first-child {
+  rotate: 45deg;
+  transform-origin: 0;
+  translate: 0.25em -0.1em;
+}
+.burger-button.is-active .burger-button__line:nth-child(2) {
+  rotate: -45deg;
+}
+.burger-button.is-active .burger-button__line:last-child {
+  width: 0;
+}
+.burger-button__line {
+  width: 100%;
+  height: 0.125rem;
+  background-color: currentColor;
+  border-radius: 1rem;
+  transition-duration: var(--transition-duration);
+}
+.burger-button__line:last-child {
+  align-self: end;
+  width: 55%;
+}
+
+.burger__menu {
+  position: fixed;
+  inset: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 4.375rem;
+  padding-top: 1.875rem;
+  z-index: 200;
+  background-color: var(--color-green);
+  color: var(--color-white);
+}
+.burger__menu-header {
+  display: flex;
+  justify-content: space-between;
+}
+.burger__menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.25rem;
+}
+.burger__menu-button {
+  color: white;
+}
+.burger__menu:not(.is-active) {
+  opacity: 0;
+  visibility: hidden;
+  translate: 100%;
+}
+
+.about__body {
+  display: flex;
+  justify-content: space-between;
+}
+.about__description {
+  max-width: 29.6875rem;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 2.1875rem;
+  padding-block: 3.125rem;
+}
+@media (width <= 47.99875rem) {
+  .about__description {
+    max-width: 100%;
+    align-items: center;
+    gap: 1.25rem;
+    padding-block: 0;
+    text-align: center;
+  }
+}
+.about__span {
+  font-size: 0.875rem;
+}
+.about__bg {
+  background-color: var(--color-green);
+  width: 34.375rem;
+  border-radius: 3.75rem;
+  overflow: hidden;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+}
+
+.services__span {
+  font-size: 0.875rem;
+}
+.services__header {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  max-width: 26.25rem;
+  gap: 0.625rem;
+}
+.services__options {
+  margin-top: 4.375rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2.5rem;
+}
+@media (width <= 47.99875rem) {
+  .services__options {
+    grid-template-columns: 1fr;
+    gap: 1.5625rem;
+  }
+}
+
+.cart {
+  border-radius: 3.75rem;
+  padding-block: 5rem;
+  padding-inline: 3.125rem;
+  display: flex;
+}
+.cart__description {
+  max-width: 18.75rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.875rem;
+  align-items: start;
+}
+.cart__description-large {
+  max-width: 36.25rem;
+}
+.cart-brown {
+  background-color: var(--color-yellow-light);
+  background-image: url(../../images/services1.png);
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: contain;
+}
+.cart-white {
+  background-color: var(--color-white);
+}
+.cart-large {
+  background-color: var(--color-white);
+  grid-column: -1/1;
+  background-image: url(../../images/services2.png);
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: contain;
+}
+
+.header-wraper {
+  display: flex;
+  justify-content: center;
 }/*# sourceMappingURL=main.css.map */
