--- a/styles/main.css
+++ b/styles/main.css
@@ -440,7 +440,7 @@ a[class] {
 }
 
 .section {
-  padding-block: clamp(2.5rem, 1.291322314rem + 4.958677686vw, 6.25rem);
+  padding-block: clamp(1.25rem, 0.645661157rem + 2.479338843vw, 3.125rem);
 }
 
 .button {
@@ -638,4 +638,74 @@ a[class] {
 .header-wraper {
   display: flex;
   justify-content: center;
+}
+
+.testimonials__body {
+  display: flex;
+  gap: 6.25rem;
+}
+@media (width <= 63.99875rem) {
+  .testimonials__body {
+    flex-direction: column;
+    gap: 3.125rem;
+  }
+}
+.testimonials__description {
+  padding-inline: 2.5rem;
+  min-width: 31.25rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2.1875rem;
+}
+.testimonials__span {
+  font-size: 0.875rem;
+}
+.testimonials__cards-wrapper {
+  overflow: hidden;
+  position: relative;
+}
+.testimonials__cards {
+  display: flex;
+  transition: transform 0.5s;
+  position: relative;
+}
+.testimonials__buttons {
+  display: flex;
+  gap: 1.25rem;
+}
+
+.card {
+  background-color: var(--color-yellow-light);
+  padding-block: 3.125rem;
+  padding-inline: 2.5rem;
+  border-radius: 3.75rem;
+  min-width: 400px;
+  position: relative;
+  margin-right: 20px;
+}
+.card-green {
+  background-color: var(--color-green);
+  color: var(--color-white);
+}
+
+.button-left {
+  display: inline-flex;
+  justify-content: center;
+  width: 3.4375rem;
+  height: 3.4375rem;
+  white-space: nowrap;
+  background-color: var(--color-white);
+  border: none;
+  border-radius: 100%;
+}
+
+.button-right {
+  display: inline-flex;
+  justify-content: center;
+  width: 3.4375rem;
+  height: 3.4375rem;
+  white-space: nowrap;
+  background-color: var(--color-green);
+  border: none;
+  border-radius: 100%;
 }/*# sourceMappingURL=main.css.map */
