--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,10 +9,14 @@
 @use 'blocks/header';
 @use 'blocks/hero';
 @use 'blocks/section';
+@use 'blocks/section-header';
 @use 'blocks/button';
 @use 'blocks/_burger-button';
 @use 'blocks/_burger-menu';
 @use 'blocks/_about';
 @use 'blocks/_services';
 @use 'blocks/_testimonials';
+@use 'blocks/_partners';
+@use 'blocks/_resources';
+@use 'blocks/community'
 
