--- a/styles/blocks/_testimonials.scss
+++ b/styles/blocks/_testimonials.scss
@@ -19,6 +19,10 @@
 		flex-direction: column;
 		gap: rem(35);
 
+		@include mobile{
+			min-width: 100%;
+		}
+
 	}
 	&__span{
 		font-size: rem(14);
@@ -48,9 +52,12 @@
 	padding-block: rem(50);
 	padding-inline:rem(40) ;
 	border-radius: rem(60);
-	min-width: 400px;
+	min-width:rem(400);
 	position: relative;
 	margin-right: 20px;
+	@include mobile{
+		min-width: 100%;
+	}
 
 	&-green{
 		background-color: var(--color-green);
