--- a/styles/main.css
+++ b/styles/main.css
@@ -213,7 +213,7 @@ svg * {
   --container-width: 77.5rem;
   --container-padding-x: 0.9375rem;
   --transition-duration: 0.2s;
-  --border-radius:4.375rem;
+  --border-radius:3.75rem;
 }
 @media (width <= 90.06125rem) {
   :root {
@@ -443,6 +443,22 @@ a[class] {
   padding-block: clamp(1.25rem, 0.645661157rem + 2.479338843vw, 3.125rem);
 }
 
+.header-wraper {
+  display: flex;
+  justify-content: center;
+}
+
+.header__center {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  max-width: 26.25rem;
+  gap: 0.625rem;
+}
+.header__center__span {
+  font-size: 0.875rem;
+}
+
 .button {
   display: inline-flex;
   justify-content: center;
@@ -577,16 +593,6 @@ a[class] {
   justify-content: center;
 }
 
-.services__span {
-  font-size: 0.875rem;
-}
-.services__header {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  max-width: 26.25rem;
-  gap: 0.625rem;
-}
 .services__options {
   margin-top: 4.375rem;
   display: grid;
@@ -635,11 +641,6 @@ a[class] {
   background-size: contain;
 }
 
-.header-wraper {
-  display: flex;
-  justify-content: center;
-}
-
 .testimonials__body {
   display: flex;
   gap: 6.25rem;
@@ -656,6 +657,11 @@ a[class] {
   display: flex;
   flex-direction: column;
   gap: 2.1875rem;
+}
+@media (width <= 47.99875rem) {
+  .testimonials__description {
+    min-width: 100%;
+  }
 }
 .testimonials__span {
   font-size: 0.875rem;
@@ -679,9 +685,14 @@ a[class] {
   padding-block: 3.125rem;
   padding-inline: 2.5rem;
   border-radius: 3.75rem;
-  min-width: 400px;
+  min-width: 25rem;
   position: relative;
   margin-right: 20px;
+}
+@media (width <= 47.99875rem) {
+  .card {
+    min-width: 100%;
+  }
 }
 .card-green {
   background-color: var(--color-green);
@@ -708,4 +719,84 @@ a[class] {
   background-color: var(--color-green);
   border: none;
   border-radius: 100%;
+}
+
+.partners {
+  background-color: var(--color-white);
+  padding: 3.75rem 3.125rem;
+  font-size: clamp(1.125rem, 1.0444214876rem + 0.3305785124vw, 1.375rem);
+  border-radius: 3.75rem;
+}
+@media (width <= 47.99875rem) {
+  .partners {
+    padding: 1.875rem 1.875rem;
+  }
+}
+.partners__list {
+  display: flex;
+  gap: 1.25rem;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.resources__list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 2.5rem;
+  margin-top: 5rem;
+}
+@media (width <= 63.99875rem) {
+  .resources__list {
+    grid-template-columns: 1fr;
+  }
+}
+.resources-card {
+  padding: 3.75rem 3.125rem;
+  background-color: var(--color-white);
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+  border-radius: var(--border-radius);
+  align-items: center;
+  text-align: center;
+}
+@media (width <= 47.99875rem) {
+  .resources-card {
+    padding: 2.1875rem 1.25rem;
+  }
+}
+.resources-card__button {
+  margin-top: 2.5rem;
+}
+
+.community {
+  background-color: var(--color-white);
+  border-radius: var(--border-radius);
+  padding-block: 3.75rem;
+  padding-left: 3.75rem;
+  position: relative;
+}
+@media (width <= 47.99875rem) {
+  .community {
+    padding-block: 1.875rem;
+    padding-left: 1.875rem;
+  }
+}
+.community__header {
+  display: flex;
+  flex-direction: column;
+  gap: 3.125rem;
+  align-items: start;
+  max-width: 27.5rem;
+  position: relative;
+  z-index: 100;
+}
+.community__span {
+  font-size: 0.875rem;
+}
+.community__img {
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }/*# sourceMappingURL=main.css.map */
