--- a/styles/main.scss
+++ b/styles/main.scss
@@ -18,5 +18,6 @@
 @use 'blocks/_testimonials';
 @use 'blocks/_partners';
 @use 'blocks/_resources';
-@use 'blocks/community'
+@use 'blocks/community';
+@use 'blocks/faq'
 
